data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3335.wast
;; 4. **Test 4: Recursively Called Function with Loop and Incorrect Return Handling**    - **Constraint:** Proper handling of recursive function calls within loops.    - **Description:** Test a scenario where a function within the loop calls itself recursively. If the return from recursion does not correctly exit the loop, it should lead to an infinite loop.

(assert_invalid
  (module
    (func $recursive (result i32)
      (i32.const 1)
      (loop $loop
        (i32.const 0) 
        (call $recursive)
        (br_if $loop)
      )
    )
  )
  "type mismatch"
)